# aie-cohort-202506

./: .gitignore  pyproject.toml
lesson-01/: 01_naive_workflow.py  02_system_prompt.py  03_tool_workflow.py
lesson-02/: memory_agent.py  reflective_agent.py  tool_agent.py
lesson-03/: etl.py  sql_agent.py
lesson-04/: embeddings.py  news_etl.py  qdrant.py  qdrant_util.py  vectorstore_intro.py
lesson-05/: agent.py  api.py  fastapi-intro.py
lesson-05/tools/: sql_agent.py  vector_chain.py
lesson-06/: Dockerfile.streamlit  pyproject.toml
lesson-06/app/: main.py
lesson-06/app/agent/: agent.py
lesson-06/app/agent/tools/: sql_agent.py  vector_chain.py
lesson-06/k8s/: deployment.yml  service.yml
lesson-06/streamlit_app/: ui.py
