[project]
name = "financial-agent"
version = "0.1.0"
description = "financial-agent project"
dependencies = [
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.45",
    "langchain-groq>=0.2.5",
    "langgraph>=0.3.11",
    "python-dotenv>=1.0.0",
    "groq>=0.5.0",
    "langchain-ollama>=0.2.3",
    "ipykernel>=6.29.5",
    "google-cloud-bigquery>=3.30.0",
    "sqlalchemy-bigquery>=1.13.0",
    "langchain-openai>=0.3.9",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=4.0.1",
    "bs4>=0.0.2",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
]
